# aws-sso-magic

./: .gitignore  1  Dockerfile  LICENSE  README.md  README_2.md  docker-build.sh  pyp-package-tool.sh  pypi-package-tool.sh  pyproject.toml
.github/workflows/: codeql-analysis.yml
cli/: Dockerfile  README.MD  README.md  docker-build.sh  pyp-package-tool.sh  pyproject.toml
cli/src/: requirements.txt
cli/src/aws_sso_magic/: __init__.py  __main__.py  cli.py  configure.py  login.py  logout.py  utils.py
src/aws_sso_magic/: __init__.py  __main__.py  configure.py  eks.py  login.py  utils.py
utils/: eks-login
