[tool.poetry]
name = "aws-sso-magic"
version = "1.0.23" # change in aws_sso_magic/__init__.py too
description = "Magic credentials on the AWS CLI home using AWS SSO login"
authors = ["Javier Ortiz <jahor2@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/javiortizmol/aws-sso-magic"
repository = "https://github.com/javiortizmol/aws-sso-magic"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

[tool.poetry.scripts]
aws-sso-magic = 'aws_sso_magic.cli:cli'

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"
boto3 = "^1.17.20"
pyyaml = "^5.3.1"
jsonschema = "^3.2.0"
aws-error-utils = "^1.0.4"
python-dateutil = "^2.8.1"
aws-sso-lib = "^1.7.0"
PyInquirer = "^1.0.3"

[tool.poetry.dev-dependencies]
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"